fix: keep analyzer compatible with Java 17